# engine

./: .gitignore  README.md  benchmark.sh  build.sh  bun.lockb  count.sh  crawler.hpp  crawler.service  crawler_init.sh  doc_count.sh  frontend_init.sh  gcp_init.sh  index_size.sh  ips.txt  ips.txt.bak  lines.sh  package.json  query_init.sh  rate.sh  reset_index.sh  send_cmd.sh  start_all.sh  start_all_qs.sh  start_crawlers.sh  start_frontend.sh  start_qs.sh  stop_all.sh  vis_init.sh
.github/workflows/: tests.yml
connectivity/: accepter.cpp  sender.cpp
frontend/: index.html
frontend/html/: index.html  timer.html  visibility.html
frontend/js/: CombinedChart.tsx  ServerChart.tsx  Visibility.tsx  index.tsx
mock_crawl/: .gitignore  CMakeLists.txt  blacklist.txt  crawl_script.py  generate_training_chunk.py  generate_training_chunks.py  index_rm.sh  init.txt  pybind.cpp  pycrawler.py  requirements.txt  training_index_init.sh  training_urls.txt
research/: demo.cpp  generate_queries.py  input.txt  ranker.ipynb  scraper.py
research/results/: ability approach report father.json  ability economy ten shoulder win effort human.json  about national meeting.json  accept probably.json  accept think stock measure staff until.json  according blood.json  account.json  across.json  action senior be.json  activity customer clear nothing.json  actually model.json  administration window over.json  admit will.json  affect serve some child campaign dinner magazine.json  again race see eight once reach benefit second.json  again.json  against.json  agency like example.json  agent next receive.json  ago wide know yourself.json  agree.json  air firm contain yard.json  air.json  all or nation push.json  all reality education commercial course sell produce final.json  all.json  allow quickly chair apply.json  allow room religious general.json  almost even contain friend.json  almost.json  already certain father.json  already little.json  already note.json  already teach within others statement.json  also speech will people.json  although contain.json  american outside.json  american.json  amount writer.json  analysis worker.json  (+1149 more)
src/: CMakeLists.txt  crawler.hpp  make_compile_cmds.sh  readme.MD  test_postlist.cpp
src/client/: CMakeLists.txt  server.cpp  visibility_server.cpp
src/client/frontend/: frontend.html
src/crawler/: CMakeLists.txt  HtmlParser.h  HtmlTags.cpp  HtmlTags.h  communicator.hpp  crawler.cpp  crawler.hpp  frontier.hpp  html_file.hpp  html_parser.hpp  html_tags.h  html_tags.hpp  link_finder.hpp  robots.hpp  todo.txt  url_parser.hpp  url_sender.hpp
src/english/: CMakeLists.txt  english.hpp  normalize.cpp  porter.cpp  strip_url_prefix.cpp
src/english/include/: english.hpp
src/frontend/: CMakeLists.txt  frontend.html  server.cpp
src/index/: CMakeLists.txt  dictionary.hpp  doclist.hpp  dummy.cpp  hashblob.hpp  hashtable.hpp  html_parser.hpp  html_tags.cpp  html_tags.hpp  isr.hpp  post_list.hpp  postlist.hpp  static_string.hpp  types.hpp  url_list.hpp  url_map.hpp
src/lib/: .clangd  CMakeLists.txt  algorithm.hpp  array.hpp  bitset.hpp  bitset_opt.hpp  bloom_filter.hpp  common.cpp  common.h  common.hpp  compress.hpp  condition_variable.hpp  cv.hpp  exception.hpp  flat_map.hpp  hash.hpp  hashmap.hpp  heap_string.hpp  linked_list.hpp  list.hpp  lock_guard.hpp  lru_cache.hpp  murmur_hash3.hpp  mutex.hpp  network.hpp  pair.hpp  queue.hpp  scoped_lock.hpp  string.hpp  string_view.hpp  unordered_map.hpp  vector.hpp
src/mock_crawl/: CMakeLists.txt  main.cpp
src/query/: CMakeLists.txt  central_server.cpp  constants.hpp  flattened_query.hpp  isr.hpp  language.hpp  main.cpp  optimizer.cpp  optimizer.hpp  plugin.hpp  query.cpp  query.hpp  query_server.cpp  ranker.hpp  ranker_test.cpp  server.cpp  url_components.hpp
src/ranker/: CMakeLists.txt  flattened_query.hpp  ranker.hpp
src/test/: CMakeLists.txt  test_bitset.cpp  test_bitset_opt.cpp  test_blacklist.cpp  test_bloom_filter.cpp  test_compress.cpp  test_compression.cpp  test_crawler.cpp  test_dict.cpp  test_doclist.cpp  test_docmap.cpp  test_doctype.cpp  test_extract_hostname.cpp  test_flatmap.cpp  test_frontier.cpp  test_hashblob.cpp  test_hashmap.cpp  test_hashtable.cpp  test_header_reader.cpp  test_html_parser.cpp  test_isr_and.cpp  test_isr_or.cpp  test_isr_phrase.cpp  test_list.cpp  test_network.cpp  test_porter.cpp  test_postlist.cpp  test_query_compile.cpp  test_queue.cpp  test_simple3.cpp  test_ssl_getter.cpp  test_static_string.cpp  test_string.cpp  test_string_view.cpp  test_to_string.cpp  test_tuple.cpp  test_unordered_map.cpp  test_url_normalize.cpp  test_url_send.cpp  test_urllist.cpp  (+2 more)
systemd/: crawler.service  frontend.service  query_server.service  visibility.service
training/: clean_results.py  crawled_urls.txt  gemini_done.txt  gemini_queries.txt  gemini_queries_sorted.txt  or_results.py  random.sorted  random_search_queries.txt  reformat_results.py  scraper.py  training_urls.txt  training_urls_unique.txt  unique_queries.txt
training/quoted-results/: VPN + for + privacy.txt  VPN + for + streaming.txt  accounting + software.txt  additive + free + recipes.txt  allium + free + recipes.txt  amazon + music.txt  amazon + prime + login.txt  antivirus + software.txt  apple + stock + price.txt  blogger + login.txt  hiking + trails + near + ann + arbor + mi.txt  laptops + under + $500.txt  mechanical + keyboards.txt  microphones + for + podcasting.txt  mind + mapping + software + for + students.txt  mind + mapping + software.txt  monitors + for + gaming.txt  travel + destinations + in + europe.txt  video + editing + software + for + mac.txt  webcams + for + streaming.txt  wireless + earbuds.txt
training/results-cleaned/: CRM | software.txt  DIY | symptoms.txt  DIY | tutorial.txt  VPN | service.txt  amazon | music.txt  amazon | prime | login.txt  apple | stock | price.txt  apply | for | a | passport.txt  artificial | sweetener | free | recipes.txt  best | CRM | for | small | business.txt  best | CRM | for | startups.txt  best | VPN | for | privacy.txt  best | VPN | for | streaming.txt  best | education.txt  (+416 more)
(+1072 files in other folders)
